[project]
name = "apex-agent"
version = "0.1.0"
description = "APEX — Autonomous Personal EXecutor. A powerful AI agent framework."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "chromadb>=0.4",        # optional: vector memory
    "python-telegram-bot>=20", # optional: telegram gateway
    "rich>=13.0",           # optional: CLI formatting
]

[project.scripts]
apex = "apex.main:main"

[project.optional-dependencies]
all = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "chromadb>=0.4",
    "python-telegram-bot>=20",
    "rich>=13.0",
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
